// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should allow to render menu inside another element 1`] = `
<div>
  <div
    id="menu-container"
  >
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should allow to use groups 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 1
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
              role="option"
            >
              Item 1
            </li>
            <li
              class="dropdown-item"
              role="option"
            >
              Item 2
            </li>
          </div>
        </div>
        <div
          class="dropdown-group"
        >
          <div
            class="junipero extra group-title"
          >
            Group 2
          </div>
          <div
            class="options"
          >
            <li
              class="dropdown-item"
              role="option"
            >
              Item 3
            </li>
            <li
              class="dropdown-item"
              role="option"
            >
              Item 4
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should auto close when disabled prop changes 2`] = `
<div>
  <div
    class="junipero dropdown disabled"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> should render 2`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: In dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Enter: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should allow to animate dropdown: Exit: Not in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Already in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Enter: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown opened"
  >
    <span
      class="dropdown-toggle opened"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner jp-slide-in-down-menu-enter-done"
      >
        <li
          class="dropdown-item"
          role="option"
        >
          Item 1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`useDropdwon() should keep the menu in dom when animated and apparition is css: Exit: Still in dom 1`] = `
<div>
  <div
    class="junipero dropdown"
  >
    <span
      class="dropdown-toggle"
      id="dropdown-toggle"
    >
      Click me
    </span>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;
